--- a/devcontainer-images-prebuild/spfx/.devcontainer/devcontainer.json
+++ b/devcontainer-images-prebuild/spfx/.devcontainer/devcontainer.json
@@ -3,7 +3,9 @@
 {
 	"name": "SPFx",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bookworm",
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
 	"features": {
 		"ghcr.io/devcontainers/features/java:1": {
 			"version": "21",
