--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
+    "dev": "gulp serve --nobrowser",
     "build": "gulp bundle",
     "clean": "gulp clean",
     "test": "gulp test"
