--- a/src/webparts/helloWorld/HelloWorldWebPart.manifest.json
+++ b/src/webparts/helloWorld/HelloWorldWebPart.manifest.json
@@ -18,9 +18,9 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "HelloWorld" },
-    "description": { "default": "HelloWorld description" },
-    "officeFabricIconFontName": "Page",
+    "title": { "default": "Hello SPFx" },
+    "description": { "default": "My first SPFx web part" },
+    "officeFabricIconFontName": "BirthdayCake",
     "properties": {
       "description": "HelloWorld"
     }
