Exercise - Testing with the hosted SharePoint Workbench
https://learn.microsoft.com/en-us/training/modules/sharepoint-spfx-web-parts/5-exercise-test-workbench

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
 	"name": "SPFx",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "ghcr.io/mitarothanken/try-sharepoint-framework/devcontainers/spfx:20240323-1545",
+	"runArgs": ["--env-file", ".devcontainer/.env"],
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
